--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -131,7 +131,8 @@ dependencies:
   webviewx_plus: 0.5.0
   pdf: ^3.11.1
   printing: ^5.5.0
-  flutter_easyloading: ^3.0.0
+  flutter_easyloading: ^3.0.0 
+  dio: ^5.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
